testing/correct/importing/with_variable.ura
$one: "one.ura"
$two: "two.ura"

import $one
import $two

from_original_1: [1, 2, 5]
from_original_2: false