testing/ParseError/invalid_variable_definition_4.ura
$invalid: [ 1, 2, 3]